Fixing text alignment

--- a/_sass/_me.scss
+++ b/_sass/_me.scss
@@ -68,7 +68,7 @@
   }
   .content-bubble.extended {
     display: none;
-    text-align: center;
+    text-align: left;
     max-width: 600px;
     padding: 40px;
     h1 {
